# crypto_bot

./: .gitignore  Dockerfile   requirements.txt
backend/: Cargo.toml  config.toml
backend/src/: binance_api.rs  bot.rs  main.rs
model/: predict.py
